<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_leaf"
        android:padding="32dp">

        <TextView
            android:id="@+id/text_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_register_text_sign_in"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_register_text_first_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edit_first_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/fragment_register_edit_first_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_register_text_last_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edit_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_first_name" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/fragment_register_edit_last_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_last_name"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_register_text_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edit_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_last_name" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/fragment_register_edit_email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_register_text_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edit_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/fragment_register_edit_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_password"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_register_text_repeat_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edit_repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <EditText
            android:id="@+id/edit_repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/fragment_register_edit_repeat_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_repeat_password"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_confirmation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/fragment_register_text_confirmation"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/spinner_access_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_repeat_password" />

        <Spinner
            android:id="@+id/spinner_access_type"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:background="@color/white"
            android:entries="@array/type_customers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_confirmation" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_access_type">

            <Button
                android:id="@+id/button_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:text="@string/fragment_register_button_sign_in"
                android:textColor="@color/green_leaf"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_back"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:text="@string/fragment_register_button_back"
                android:textColor="@color/green_leaf"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_signIn"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>