<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_add_entry"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/dialog_title_vintage"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <LinearLayout
            android:id="@+id/linear_layout_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/dialog_vintage_text_description"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:hint="@string/dialog_vintage_edit_description_hint"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/text_description"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_layout_begin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_description"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/text_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/dialog_vintage_text_begin"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

            <EditText
                android:id="@+id/edit_begin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:hint="@string/dialog_vintage_edit_begin_hint"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/text_begin"
                app:layout_constraintTop_toBottomOf="@+id/edit_description"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_end"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_begin"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/text_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/dialog_vintage_text_end"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:hint="@string/dialog_vintage_edit_end_hint"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/text_end"
                app:layout_constraintTop_toBottomOf="@+id/edit_begin"
                android:importantForAutofill="no"
                android:inputType="text" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_entries">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/dialog_button_text_back" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/dialog_button_text_submit" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>